--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,41 @@
+<!--
+    **NOTE:** This is a template for index.html.
+    It use ejs and htmlWebpackPlugin to generate a different index.html for each environment.
+    htmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles
+    to this file. The generated bundles have hash-based filenames,
+    so it is neccessary to add the references dynamically.
+    For more info on ejs, see http://www.embeddedjs.com/.
+    For examples of using it with htmlWebpackPlugin,
+    see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+        <!-- Legacy agent deprecated 2018-10-31 -->
+        <script>
+            window._trackJs = { 
+            token: '<%=htmlWebpackPlugin.options.trackJSToken%>'
+            // for more configuration options, see https://docs.trackjs.com
+            };
+        </script>
+        <script src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+        <% } %>
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="bundle.js"></script>
+        <h1>Users</h1>
+        <table>
+            <thead>
+               <th>&nbsp;</th>
+               <th>Id</th>
+               <th>First Name</th>
+               <th>Last Name</th>
+               <th>Email</th> 
+            </thead>
+            <tbody id="users">
+
+            </tbody>
+        </table>
     </body>
 </html>
